fix height chart + fix overflow hiden

--- a/src/dashboard/Dashboard.adaptive.css
+++ b/src/dashboard/Dashboard.adaptive.css
@@ -580,10 +580,6 @@
     padding: 10px;
   }
 
-  .charts {
-    height: 100%;
-    overflow: auto;
-  }
 }
 @media only screen and (max-width : 1028px) {
   .dashboard_wrapper
